# pro_prac_two

./: CMakeLists.txt  main.cpp  menu_utils.cpp  menu_utils.h
animals/: animal_act_selector.cpp  animal_act_selector.h
cars/: parade_organizer.cpp  parade_organizer.h
circus/: circus_scheduler.cpp  circus_scheduler.h
cleaner/: log_cleaner.cpp  log_cleaner.h
festival/: festival_scheduler.cpp  festival_scheduler.h
finance/: transaction_utils.cpp  transaction_utils.h
normalized/: score_processor.cpp  score_processor.h
patient/: patient_queue.cpp  patient_queue.h
physics/: energy_analyzer.cpp  energy_analyzer.h
sensor/: sensor_data_corrector.cpp  sensor_data_corrector.h
